[gd_scene load_steps=38 format=2]

[ext_resource path="res://sprites/cammy.png" type="Texture" id=1]
[ext_resource path="res://scripts/Boss.gd" type="Script" id=2]
[ext_resource path="res://sounds/bullet-go.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/HurtBox.gd" type="Script" id=4]
[ext_resource path="res://scripts/HitBox.gd" type="Script" id=5]

[sub_resource type="ShaderMaterial" id=20]

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 329, 602, 45, 100 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 375, 602, 45, 100 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 421, 602, 45, 100 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 467, 602, 45, 100 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 513, 602, 45, 100 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 559, 602, 45, 100 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 605, 602, 45, 100 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 651, 602, 45, 100 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 697, 602, 45, 100 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 258, 1538, 67, 93 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 325, 1538, 77, 93 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 402, 1538, 77, 93 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 479, 1538, 77, 93 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 556, 1538, 77, 93 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 5, 3, 48, 88 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 54, 3, 48, 88 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 103, 3, 48, 88 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 152, 3, 48, 88 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 201, 3, 48, 88 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 250, 3, 48, 88 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 299, 3, 48, 88 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 348, 3, 48, 88 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 637, 1531, 74, 108 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 710, 1531, 56, 108 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 766, 1531, 46, 108 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 812, 1531, 42, 108 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 855, 1531, 43, 108 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 898, 1531, 43, 108 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 941, 1531, 49, 108 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "attack1",
"speed": 8.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": false,
"name": "death",
"speed": 3.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "reborn",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 12.75, 41 )

[node name="Cammy" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 20 )
frames = SubResource( 9 )
animation = "idle"
frame = 2
playing = true

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource( 5 )
id = "BOSS_HITBOX"

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -1.75, 1 )
shape = SubResource( 19 )

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 10
monitorable = false
script = ExtResource( 4 )
id = "BOSS_HURTBOX"

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( -1.75, 1 )
shape = SubResource( 19 )

[node name="BulletHitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
